wrap code blocks to avoid horizontal scroll

--- a/_sass/code.scss
+++ b/_sass/code.scss
@@ -341,6 +341,7 @@ figure.highlight {
 
 pre.highlight {
   position: relative;
+  white-space: pre-wrap;
 
   // copy code to clipboard
   .copy {
